samples/_failures_safe/1761433142_baa530_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_875bb932.c: In function ‘main’:
./samples/SAFE/__tmp_875bb932.c:176:5: error: expected declaration or statement at end of input
  176 |     }
      |     ^
